# girauno

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac  libgiracoinconsensus.pc.in  make-debug.sh  make-release-win.sh  make-release.sh
contrib/: README.md  bitcoin-cli.bash-completion  bitcoin-qt.pro  bitcoin-tx.bash-completion  bitcoind.bash-completion  qt_translations.py  tidy_datadir.sh
depends/: README.md  config.site.in  description.md
deploy/: giracoin-cli  giracoin-tx  giracoin.conf
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addressindex.h  addrman.cpp  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_memusage.h  core_read.cpp  (+90 more)
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_giracoin.cpp  crypto_hash.cpp  rollingbloom.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.cpp  aes.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/crypto/ctaes/: README.md
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  giracoin.cpp  giracoin.qrc  giracoin_locale.qrc  giracoinaddressvalidator.cpp  giracoinaddressvalidator.h  giracoinamountfield.cpp  giracoinamountfield.h  giracoingui.cpp  giracoingui.h  giracoinstrings.cpp  giracoinunits.cpp  giracoinunits.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  logindialog.cpp  logindialog.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  (+68 more)
src/qt/forms/: addressbookpage.ui  askpassphrasedialog.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: giracoin_af.ts  giracoin_af_ZA.ts  giracoin_ar.ts  giracoin_be_BY.ts  giracoin_bg.ts  giracoin_bg_BG.ts  giracoin_ca.ts  giracoin_ca@valencia.ts  giracoin_ca_ES.ts  giracoin_cs.ts  giracoin_cs_CZ.ts  giracoin_cy.ts  giracoin_da.ts  giracoin_de.ts  giracoin_el.ts  giracoin_el_GR.ts  giracoin_en.ts  giracoin_en_GB.ts  giracoin_eo.ts  giracoin_es.ts  giracoin_es_AR.ts  giracoin_es_CL.ts  giracoin_es_CO.ts  giracoin_es_DO.ts  giracoin_es_ES.ts  giracoin_es_MX.ts  giracoin_es_UY.ts  giracoin_es_VE.ts  giracoin_et.ts  giracoin_eu_ES.ts  giracoin_fa.ts  giracoin_fa_IR.ts  giracoin_fi.ts  giracoin_fr.ts  giracoin_fr_CA.ts  giracoin_fr_FR.ts  giracoin_gl.ts  giracoin_he.ts  giracoin_hi_IN.ts  giracoin_hr.ts  (+46 more)
src/qt/res/: giracoin-qt-res.rc
src/qt/res/icons/: giracoin.icns
src/qt/res/movies/: makespinner.sh
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: giracoinconsensus.cpp  giracoinconsensus.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: .gitignore  Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_giracoin_NativeSecp256k1.c  org_giracoin_NativeSecp256k1.h
src/secp256k1/src/java/org/bitcoin/: NativeSecp256k1.java
src/support/: cleanse.cpp  cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum.h  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  giracoin-util-test.py  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  (+23 more)
src/test/data/: README.md  giracoin-util-test.json
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h
src/wallet/: crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: accounting_tests.cpp  crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+194 files in other folders)
